test/domains/compilerErrors/orderIndex-non-int.chpl

var DR = {1..3};
var zeroUint: uint = 0;
writeln(DR.orderToIndex(zeroUint));
