test/domains/compilerErrors/orderIndex-non-int.good
orderIndex-non-int.chpl:4: error: illegal value passed to orderToIndex(): the argument 'order' must be an integer, excluding uint(64)
